Fix scroll issue on mobile

--- a/Client/stylesheets/style.scss
+++ b/Client/stylesheets/style.scss
@@ -36,7 +36,7 @@ body {
 
 #react-app{
     display: flex;
-    height: 100%;
+    min-height: 100%;
 }
 
 @media (min-width: 769px) {
